update scripts in package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "contwidgetor-ui",
   "version": "0.0.1",
   "description": "Widget for contwidgetor",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --compilers js:babel-core/register tests/",
+    "prepublish": "./node_modules/.bin/babel -d lib src/"
   },
   "keywords": [
     "react",
