--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-react-jsx": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "jest": "^0.1.40"
   }
 }
