--- a/Example/package.json
+++ b/Example/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^6.2.0",
     "contwidgetor-ui": "file:..",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -19,6 +20,6 @@
     "babel-core": "^6.2.1",
     "babel-plugin-transform-react-jsx": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-preset-react": "^6.1.18"
   }
 }
